Fix small alignment issue on Home page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -182,7 +182,7 @@ body {
               min-height: 250px;
               height: 33%;
               margin-top: -9px;
-              
+              margin-left: 2px;
           }
 
           &__titleheadings {
